# tlpi-examples-rust

./: Cargo.toml
src/chapter15/: t_stat.rs
src/chapter4/: copy.rs  seek_io.rs
src/chapter5/: bad_exclusive_open.rs  t_readv.rs  t_truncate.rs
src/exercises/chapter5/: exercise3.rs
